--- a/assets/css/skin.dark.css
+++ b/assets/css/skin.dark.css
@@ -3,6 +3,7 @@
   }
 .white,
 .table,
+.wizard1,
 .dataTables_info {
   color: #fff !important;
 }
@@ -95,7 +96,7 @@ body {
   .icon-btn {
     width: 50px;
     height: 50px;
-    border:2px solid #707070;
+    /* border:2px solid #707070; */
     background: red;
     border-radius: 25px;
     overflow: hidden;
@@ -266,4 +267,15 @@ table.dataTable thead .sorting_desc {
 
 .badge-danger {
     background-color: #D70900;
+}
+
+
+
+
+/*input fields*/
+.fields{
+  background: #d3d3d3;
+}
+input::placeholder {
+  color: #000 !important;
 }
