--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -31,6 +31,11 @@
         width:100%  !important;
     }
 
+    .nav-tabs .nav-item+.nav-item {
+        margin-left: 0px;
+        border-bottom: 1px solid #e2e5ed;
+    }
+
 }
 
 /* Custom footer design */
