--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -44,7 +44,7 @@
 
     .plus-btn
     {
-        position: absolute;
+        position: fixed;
         right: 10px;
         bottom: 15px;
         z-index: 100;
