btn size updated

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -48,6 +48,14 @@
         right: 10px;
         bottom: 15px;
         z-index: 100;
+        width: 60px;
+        height: 60px;
+    }
+
+
+    .plus-btn svg {
+        height: 55px;
+        width: 55px;
     }
 
 }
@@ -524,8 +532,8 @@ table.dataTable tbody tr.odd {
 /* Add request style  ends here */
 
 .plus-btn {
-    width: 55px;
-    height: 55px;
+    width: 35px;
+    height: 35px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -538,6 +546,6 @@ table.dataTable tbody tr.odd {
 }
 
 .plus-btn svg{
-    height: 44px;
-    width: 44px;
+    height: 34px;
+    width: 34px;
 }
