--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,168 @@
-/* Custom Background design */
+ .theme-light {
+     --color-page: #222222;
+     --color-h-tags: #222222;
+     --color-table-tx: #222222;
+
+     --color-ul-main-link: #707070;
+     --color-ul-active-link: #d70700;
+     /* Check for UBA Color */
+     --color-ul-sub-link: #222222;
+     --color-border-main: #e1e1e1;
+
+     --color-inactive-tx: #707070;
+     --color-inactive-border: #e1e1e1;
+     --color-inactive-bg: #f3f4f7;
+     --color-light-grey-txt: #e0e0e0;
+
+     --color-svg-icons: #707070;
+     --color-svg-active: #d70700;
+     /* Check for UBA Color */
+     --color-svg-plus-btn: white;
+ }
+
+ .theme-dark {
+     --color-bg-content: #2f2f2f;
+     --color-bg-container: #393939;
+
+     --color-h-tags: #fff;
+     --color-table-tx: #fff;
+
+     --color-ul-main-link: #989898;
+     --color-ul-active-link: #fc5040;
+     /* Check for UBA Color */
+     --color-ul-sub-link: #ababab;
+     --color-border-main: #4b4b4b;
+
+     --color-inactive-tx: #ababab;
+     --color-inactive-border: #393939;
+     --color-inactive-bg: #515151;
+     --color-light-grey-txt: #848484;
+
+     --color-svg-icons: #e8e8e8;
+     --color-svg-active: #fc5040;
+     /* Check for UBA Color */
+     --color-svg-inactive: #ababab;
+     --color-svg-plus-btn: white;
+ }
+
+
+body {
+    background-color: var(--color-bg-content) !important;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+.breadcrumb-style1 .breadcrumb-item a,
+body,
+.tx-color-01,
+.tx-color-03 {
+    color: var(--color-h-tags) !important;
+}
+
+.table {
+    color: var(--color-table-tx) !important;
+}
+
+.nav-aside .nav-item ul a {
+    color: var(--color-ul-sub-link) !important;
+}
+
+.nav-aside .nav-link {
+    color: var(--color-ul-main-link) !important;
+}
+
+.nav-aside .nav-item.active .nav-link,
+.nav-aside .with-sub.show:not(.active) .nav-link {
+    color: var(--color-ul-active-link) !important;
+}
+
+.dataTables_wrapper .dataTables_length,
+.dataTables_info,
+.nav-tabs .nav-link.active,
+.dataTables_length select {
+    color: var(--color-table-tx) !important;
+    border-color: var(--color-border-main) !important;
+    background-color: var(--color-bg-container);
+}
+
+.border,
+.bd-gray-300,
+.card,
+.card-header,
+table.dataTable.no-footer,
+.table td {
+    border-color: var(--color-border-main) !important;
+    background-color: var(--color-bg-container);
+}
+
+.nav-tabs .nav-link.active,
+.nav-tabs .nav-link:hover,
+.nav-tabs .nav-link:focus {
+    background-color: var(--color-bg-container);
+    border-color: var(--color-border-main);
+    color: var(--color-inactive-tx);
+}
+
+/* Table Inactive Tabs */
+.nav-tabs .nav-link {
+    background-color: var(--color-inactive-bg);
+    border-color: var(--color-inactive-bg);
+    color: var(--color-inactive-tx);
+}
+
+/* Table Search Form */
+.dataTables_wrapper .dataTables_filter input {
+    border-color: var(--color-border-main) !important;
+    background-color: var(--color-bg-container);
+    color: var(--color-table-tx);
+}
+
+.dataTables_wrapper .dataTables_filter input::placeholder {
+    color: var(--color-light-grey-txt);
+}
+
+table.dataTable tbody td.sorting_1,
+table.dataTable thead .sorting_asc {
+    background-color: var(--color-inactive-bg);
+}
+
+.content-header,
+.aside-header,
+.aside-body {
+    border-color: var(--color-border-main) !important;
+    background-color: var(--color-bg-container) !important;
+}
+
+/* All SVG Colors */
+svg {
+    stroke: var(--color-svg-icons);
+}
+
+.nav-aside .nav-item.active svg {
+    stroke: var(--color-svg-active);
+}
+
+.nav-aside svg {
+    stroke: var(--color-svg-inactive);
+}
+
+.plus-btn svg {
+    stroke: var(--color-svg-plus-btn);
+}
+
+/* End All SVG colors */
+
+/* Custom Login Background design */
 .spmp-bg
 {
     background: url(../img/dark-img-home-1.jpg) no-repeat center center fixed !important;
@@ -12,9 +176,6 @@
     font-size: 12px !important;
     font-weight: 600 !important;
 }
-/* .content-body {
-    background-color: #fafafa !important;
-} */
 
 @media (max-width: 576px) {
     .mg-l-125 {margin-left: 0px !important;}
@@ -57,6 +218,15 @@
     .holder-pie,
     .pie-container {
         padding-bottom: 10px;
+    }
+
+
+    .dataTables_wrapper .dataTables_filter input {
+        width: 50vw;
+    }
+
+    input {
+        margin-right: 10vw;
     }
 
 }
@@ -163,15 +333,10 @@ table.dataTable thead .sorting_desc
 }
 
 .dataTables_wrapper .dataTables_paginate .paginate_button.previous,
-.dataTables_wrapper .dataTables_paginate .paginate_button.next 
-{
-    padding: 4px !important;
-    font-size: 10px;
-}
-
-.dataTables_paginate .paginate_button.current,
+.dataTables_wrapper .dataTables_paginate .paginate_button.next,.dataTables_paginate .paginate_button.current,
 .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover,
-.dataTables_wrapper .dataTables_paginate .paginate_button.current:focus 
+.dataTables_wrapper .dataTables_paginate .paginate_button.current:focus,
+.dataTables_wrapper .dataTables_paginate .paginate_button
 {
     font-size: 10px;
 }
@@ -179,110 +344,6 @@ table.dataTable thead .sorting_desc
 table.dataTable tbody tr.odd {
     border-left: 5px solid #000 !important;
 }
-
-
-/* Icon Buttton Starts here  */
-.icon-btn {
-    width: 50px;
-    height: 50px;
-    border: 1px solid #ddd;
-    background: red;
-    border-radius: 25px;
-    overflow: hidden;
-    position: relative;
-    transition: width 0.2s ease-in-out;
-
-    -webkit-box-shadow: 0 8px 6px -6px #666;
-    -moz-box-shadow: 0 8px 6px -6px #666;
-    Submitbox-shadow: 0 8px 6px -6px #666;
-    Submitpadding-bottom: 10px;
-}
-
-.add-btn:hover {
-    width: 120px;
-}
-
-.add-btn::before,
-.add-btn::after {
-    transition: width 0.2s ease-in-out, border-radius 0.2s ease-in-out;
-    content: "";
-    position: absolute;
-    height: 4px;
-    width: 10px;
-    top: calc(50% - 2px);
-    background: white;
-}
-
-.add-btn::after {
-    right: 14px;
-    overflow: hidden;
-    border-top-right-radius: 2px;
-    border-bottom-right-radius: 2px;
-}
-
-.add-btn::before {
-    left: 14px;
-    border-top-left-radius: 2px;
-    border-bottom-left-radius: 2px;
-}
-
-.icon-btn:focus {
-    outline: none;
-}
-
-.btn-txt {
-    opacity: 0;
-    transition: opacity 0.2s;
-    color: white;
-}
-
-.add-btn:hover::before,
-.add-btn:hover::after {
-    width: 4px;
-    border-radius: 2px;
-}
-
-.add-btn:hover .btn-txt {
-    opacity: 1;
-}
-
-.add-icon::after,
-.add-icon::before {
-    transition: all 0.2s ease-in-out;
-    content: "";
-    position: absolute;
-    height: 20px;
-    width: 2px;
-    top: calc(50% - 10px);
-    background: white;
-    overflow: hidden;
-}
-
-.add-icon::before {
-    left: 22px;
-    border-top-left-radius: 2px;
-    border-bottom-left-radius: 2px;
-}
-
-.add-icon::after {
-    right: 22px;
-    border-top-right-radius: 2px;
-    border-bottom-right-radius: 2px;
-}
-
-.add-btn:hover .add-icon::before {
-    left: 15px;
-    height: 4px;
-    top: calc(50% - 2px);
-}
-
-.add-btn:hover .add-icon::after {
-    right: 15px;
-    height: 4px;
-    top: calc(50% - 2px);
-}
-
-/* Icon Buttton Ends here  */
 
 
 /* New Style REVIEW */
@@ -307,110 +368,6 @@ table.dataTable tbody tr.odd {
     Submitbox-shadow: 0 8px 6px -6px #ddd;
     Submitpadding-bottom: 10px;
 }
-
-/* Icon Buttton Starts here  */
-.icon-btn {
-    width: 50px;
-    height: 50px;
-    border: 1px solid #ddd;
-    background: red;
-    border-radius: 25px;
-    overflow: hidden;
-    position: relative;
-    transition: width 0.2s ease-in-out;
-
-    -webkit-box-shadow: 0 8px 6px -6px #666;
-    -moz-box-shadow: 0 8px 6px -6px #666;
-    Submitbox-shadow: 0 8px 6px -6px #666;
-    Submitpadding-bottom: 10px;
-}
-
-.add-btn:hover {
-    width: 120px;
-}
-
-.add-btn::before,
-.add-btn::after {
-    transition: width 0.2s ease-in-out, border-radius 0.2s ease-in-out;
-    content: "";
-    position: absolute;
-    height: 4px;
-    width: 10px;
-    top: calc(50% - 2px);
-    background: white;
-}
-
-.add-btn::after {
-    right: 14px;
-    overflow: hidden;
-    border-top-right-radius: 2px;
-    border-bottom-right-radius: 2px;
-}
-
-.add-btn::before {
-    left: 14px;
-    border-top-left-radius: 2px;
-    border-bottom-left-radius: 2px;
-}
-
-.icon-btn:focus {
-    outline: none;
-}
-
-.btn-txt {
-    opacity: 0;
-    transition: opacity 0.2s;
-    color: white;
-}
-
-.add-btn:hover::before,
-.add-btn:hover::after {
-    width: 4px;
-    border-radius: 2px;
-}
-
-.add-btn:hover .btn-txt {
-    opacity: 1;
-}
-
-.add-icon::after,
-.add-icon::before {
-    transition: all 0.2s ease-in-out;
-    content: "";
-    position: absolute;
-    height: 20px;
-    width: 2px;
-    top: calc(50% - 10px);
-    background: white;
-    overflow: hidden;
-}
-
-.add-icon::before {
-    left: 22px;
-    border-top-left-radius: 2px;
-    border-bottom-left-radius: 2px;
-}
-
-.add-icon::after {
-    right: 22px;
-    border-top-right-radius: 2px;
-    border-bottom-right-radius: 2px;
-}
-
-.add-btn:hover .add-icon::before {
-    left: 15px;
-    height: 4px;
-    top: calc(50% - 2px);
-}
-
-.add-btn:hover .add-icon::after {
-    right: 15px;
-    height: 4px;
-    top: calc(50% - 2px);
-}
-
-/* Icon Buttton Ends here  */
-
 
 /* DropZone Style Starts here  */
 
@@ -506,18 +463,6 @@ table.dataTable tbody tr.odd {
 
 /* Approval Request Trail Style  ends here */
 
-/* Add request style  starts here */
-@media (min-width: 576px) {
-    .dataTables_wrapper .dataTables_filter input {
-        width: 50vw;
-    }
-
-    input {
-        margin-right: 10vw;
-    }
-
-}
-
 .table-style {
     width: 32px;
     height: 32px;
@@ -554,4 +499,80 @@ table.dataTable tbody tr.odd {
 .holder-pie,
 .pie-container {
     padding-bottom: 38px;
+}
+
+/* Switch Button Styling */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    height: 20px;
+    width: 50px;
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 30px;
+    width: 30px;
+    left: 0px;
+    bottom: 4px;
+    top: 0;
+    bottom: 0;
+    margin: auto 0;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+    box-shadow: 0 0px 15px #2020203d;
+    background: white url('../img/switch-moon.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding: 0;
+}
+
+input:checked+.slider {
+    background-color: #d70700;
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px #d70700;
+}
+
+input:checked+.slider:before {
+    -webkit-transform: translateX(24px);
+    -ms-transform: translateX(24px);
+    transform: translateX(24px);
+    background: white url('../img/switch-sun.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding: 0px;
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
 }
