--- a/assets/css/skin.dark.css
+++ b/assets/css/skin.dark.css
@@ -1,10 +1,17 @@
-.aside-menu-link:hover, .aside-menu-link:focus {
+body 
+{
+    background-color: #2f2f2f;
+}
+
+.aside-menu-link:hover, .aside-menu-link:focus 
+{
     color: #fff !important; 
-  }
+}
 .white,
 .table,
 .wizard1,
-.dataTables_info {
+.dataTables_info 
+{
   color: #fff !important;
 }
 .nav-aside .nav-item ul a {
@@ -28,17 +35,17 @@
 .card {
     background-color: #393939;
     border-color: #707070;
-    border: 0.5px solid #474747;
+    /* border: 0.5px solid #474747; */
 }
 
 .border-1 {
-    border: 0.5px solid #707070 !important;
+    /* border: 0.5px solid #707070 !important; */
 }
 
 .border-2 {
-  border-left: 0.5px solid #707070 !important;
+  /* border-left: 0.5px solid #707070 !important;
   border-bottom: 0.5px solid #707070 !important;
-  border-right: 0.5px solid #707070 !important;
+  border-right: 0.5px solid #707070 !important; */
 }
 
 .nav-aside .nav-item.active .nav-link {
@@ -62,14 +69,14 @@
 }
 .content-header
 {
-  border-bottom: 1px solid #474747;
+  /* border-bottom: 1px solid #474747; */
 }
 .aside-header {
-  border-right: 1px solid #474747;
+  /* border-right: 1px solid #474747; */
 }
 .aside-body {
-  border-top: 1px solid #474747;
-  border-right: 1px solid #474747;
+  /* border-top: 1px solid #474747;
+  border-right: 1px solid #474747; */
 }
 
 .dark-bg-1 {
@@ -80,110 +87,23 @@
 .nav-aside .nav-link:hover,
 .nav-aside svg:hover {
   color: #fff;
-  font-weight: 600;
+  /* font-weight: 600; */
 }
 
 .tab-content{
-  border: 1px solid #474747 !important;
-  border-top: none !important;
+  /* border: 1px solid #474747 !important;
+  border-top: none !important; */
 }
 
 
-body {
-    background-color: #2f2f2f;
-}
-/* Icon Buttton Starts here  */
-  .icon-btn {
-    width: 50px;
-    height: 50px;
-    /* border:2px solid #707070; */
-    background: red;
-    border-radius: 25px;
-    overflow: hidden;
-    position: relative;
-    transition: width 0.2s ease-in-out;
-  }
-  .add-btn:hover {
-    width: 120px;
-  }
-  .add-btn::before,
-  .add-btn::after {
-    transition: width 0.2s ease-in-out, border-radius 0.2s ease-in-out;
-    content: "";
-    position: absolute;
-    height: 4px;
-    width: 10px;
-    top: calc(50% - 2px);
-    background: white;
-  }
-  .add-btn::after {
-    right: 14px;
-    overflow: hidden;
-    border-top-right-radius: 2px;
-    border-bottom-right-radius: 2px;
-  }
-  .add-btn::before {
-    left: 14px;
-    border-top-left-radius: 2px;
-    border-bottom-left-radius: 2px;
-  }
-  .icon-btn:focus {
-    outline: none;
-  }
-  .btn-txt {
-    opacity: 0;
-    transition: opacity 0.2s;
-    color: white;
-  }
-  .add-btn:hover::before,
-  .add-btn:hover::after {
-    width: 4px;
-    border-radius: 2px;
-  }
-  .add-btn:hover .btn-txt {
-    opacity: 1;
-  }
-  .add-icon::after,
-  .add-icon::before {
-    transition: all 0.2s ease-in-out;
-    content: "";
-    position: absolute;
-    height: 20px;
-    width: 2px;
-    top: calc(50% - 10px);
-    background: white;
-    overflow: hidden;
-  }
-  .add-icon::before {
-    left: 22px;
-    border-top-left-radius: 2px;
-    border-bottom-left-radius: 2px;
-  }
-  .add-icon::after {
-    right: 22px;
-    border-top-right-radius: 2px;
-    border-bottom-right-radius: 2px;
-  }
-  .add-btn:hover .add-icon::before {
-    left: 15px;
-    height: 4px;
-    top: calc(50% - 2px);
-  }
-  .add-btn:hover .add-icon::after {
-    right: 15px;
-    height: 4px;
-    top: calc(50% - 2px);
-  }
-  
-/* Icon Buttton Ends here  */
 
 .nav-tabs .nav-link {
     background-color: #393939;
-    border-bottom-width: 1px;
+    /* border-bottom-width: 1px;
     border-color: #474747 #474747 #474747 #474747;
     border-top: 0px;
     border-left: 0px;
-    border-right: 0px;
+    border-right: 0px; */
     color: #717171;
 }
 
@@ -197,13 +117,13 @@ body {
 .nav-tabs .nav-item.show .nav-link {
   color: #ffffff;
   background-color: #272727;
-  border: 1px solid;
+  /* border: 1px solid; */
   border-color: #474747 #474747 #474747 #474747;
 }
 
-#myTabContent {
+/* #myTabContent {
     border: 0;
-}
+} */
 
 .progress-circle:after {
   background-color: rgb(63, 63, 63);;
@@ -222,19 +142,19 @@ input {
 }
 
 /* Search Border Color */
-.dataTables_wrapper .dataTables_filter input {
+/* .dataTables_wrapper .dataTables_filter input {
     border: 1px solid #474747;
     color: #fff;
     box-shadow: none;
-}
+} */
 
 .table-borderless td {
-    border: 0;
+    /* border: 0; */
     color: white !important;
 }
 
 .table-borderless th {
-  border: 0;
+  /* border: 0; */
   color: #E0E0E0 !important;
 }
 
@@ -245,9 +165,9 @@ table.dataTable.no-footer {
 select {
   background-color: #2f2f2f;
   color: #e0e0e0;
-  font: 600;
+  /* font: 600;
   border-radius: 2px;
-  border: 1px solid #707070;
+  border: 1px solid #707070; */
 
 }
 
@@ -268,9 +188,6 @@ table.dataTable thead .sorting_desc {
 .badge-danger {
     background-color: #D70900;
 }
-
-
-
 
 /*input fields*/
 .fields{
