--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,5 +1,5 @@
  .theme-light {
-     --color-page: #222222;
+     --color-bg-container: #ffffff;
      --color-h-tags: #222222;
      --color-table-tx: #222222;
 
@@ -195,20 +195,6 @@ svg {
     .nav-tabs .nav-item+.nav-item {
         margin-left: 0px;
         border-bottom: 1px solid #e2e5ed;
-    }
-
-    .sign-out {
-            position: absolute;
-            right: 15px;
-            margin-top: 45px;
-    }
-
-    .plus-btn
-    {
-        position: fixed;
-        right: 10px;
-        bottom: 15px;
-        z-index: 100;
     }
 
     .progress-circle {
@@ -576,3 +562,17 @@ input:checked+.slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
+
+
+    .sign-out {
+        position: absolute;
+        right: 15px;
+        margin-top: 45px;
+    }
+
+    .plus-btn {
+        position: fixed;
+        right: 10px;
+        bottom: 15px;
+        z-index: 100;
+    }
