--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -146,19 +146,19 @@ table.dataTable thead .sorting_asc {
 
 /* All SVG Colors */
 svg {
-    stroke: var(--color-svg-icons);
+    stroke: var(--color-svg-icons) !important;
 }
 
 .nav-aside .nav-item.active svg {
-    stroke: var(--color-svg-active);
+    stroke: var(--color-svg-active) !important;
 }
 
 .nav-aside svg {
-    stroke: var(--color-svg-inactive);
+    stroke: var(--color-svg-inactive) !important;
 }
 
 .plus-btn svg {
-    stroke: var(--color-svg-plus-btn);
+    stroke: var(--color-svg-plus-btn) !important;
 }
 
 /* End All SVG colors */
@@ -576,4 +576,18 @@ input:checked+.slider:before {
         right: 10px;
         bottom: 15px;
         z-index: 100;
+    }
+
+
+    .logo-uba-white
+    {
+        background: white url('../img/uba_logo_red.svg') no-repeat;
+        height: 40px;
+        width: 114px
+    }
+
+    .logo-uba-dark {
+        background: white url('../img/uba_logo_red.svg') no-repeat;
+        height: 40px;
+        width: 114px
     }
